# vicseksim-rs

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: main.yaml
draft/: main.tex
examples/: io_demo.rs
plots/: README.md  simple_example.py  visualize_birds_sphere.py
src/: README.md  analysis.rs  cli.rs  ensemble.rs  export_example.rs  io.rs  lib.rs  main.rs  particle.rs  simulation.rs  vector.rs
src/bird/: mod.rs  physics.rs  tests.rs
src/ensemble/: io.rs  mod.rs  tests.rs
src/io/: analysis.rs  bin.rs  ensemble.rs  json.rs  mod.rs  simulation.rs
src/simulation/: io.rs  logic.rs  mod.rs  tests.rs
src/vector/: math.rs  mod.rs  ops.rs  tests.rs
tests/: ensemble_test.rs  integration_test.rs  io_integration.rs  simulation_test.rs
