[package]
name = "vicseksim-rs"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
nalgebra = "0.33.2"
ndarray = "0.16.1"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"


[lib]
name = "flocking_lib"
path = "src/lib.rs"

[[bin]]
name = "vicseksim-rs"
path = "src/main.rs"
